[package]
name = "web_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We are using the latest beta release of actix-web
# that relies on tokio 1.x.x
# There is _some_ turbulence when working with betas,
# we are pinning a few other supporting packages to ensure
# compatibility.
actix-web = "=4.1.0"
actix-http = "=3.2.1"
actix-files = "=0.6.2"
sysinfo = "=0.3.15"
serde_json = "1.0.85"
serde = { version = "1.0.139", features = ["derive"] }
exitcode = "1.1.2"
