[package]
name = "web_monitor"
version = "0.1.0"
edition = "2021"
repository = "https://bitbucket.org/lazarbankovic/webmonitor"

[dependencies]
actix-web = "=4.1.0"
actix-http = "=3.2.1"
actix-files = "=0.6.2"
sysinfo = "=0.26.2"
serde_json = "1.0.85"
serde = { version = "1.0.139", features = ["derive"] }
exitcode = "1.1.2"
fs2 = "0.4.3"